# bitdumper

./: Cargo.toml  bit.pkt.conf  example.config.yaml  log.txt  readme.md
html/: index.html
src/: main.rs
