[package]
name = "bitdumper"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
hyper = { version = "0.14", features = ["client"] }
reqwest = { version = "0.11", features = ["trust-dns","json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = { version = "0.21", features = ["tokio-runtime"] }
warp = "0.3.7"
